# media-lab

./: .coderabbit.yaml  .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yaml  setting.gradle.kts  settings.gradle.kts
control-plane/: Dockerfile  TROUBLESHOOTING_RTMP_TO_HLS.md  build.gradle.kts  settings.gradle.kts
control-plane/docs/adr/: 0001-error-classification-policy.md  0003-separate-task-and-process.md
k6/: compare-test.js  simpleStreamTest.js
live-server/: docker-compose.yml  ffmpeg_cmd  index.html  nginx.conf
live-server/hls_data/: index.html  index.m3u8  index103.ts  index104.ts  index105.ts  index106.ts  index107.ts  index108.ts  index109.ts  index123.ts  index124.ts  index125.ts  index126.ts  index127.ts  index128.ts  index129.ts
live-server/www/: index.html
live-signaling/: build.gradle.kts  settings.gradle.kts
media-common/: build.gradle.kts  settings.gradle.kts
simple-cpp-stream/: Dockerfile  README.md  main.cpp
simple-cpp-stream/src/: main.cpp
simple-stream/: build.gradle.kts  settings.gradle.kts
vod-server/: VOD_SERVER_ANALYSIS.md
vod-server/cpp/simple-cpp-stream/: CMakeLists.txt  Dockerfile  README.md
vod-server/cpp/simple-cpp-stream/src/: main.cpp
vod-server/cpp/simple-cpp-stream/src/core/: MediaController.cpp  MediaController.hpp
vod-server/cpp/simple-cpp-stream/src/http/: HttpRequest.cpp  HttpRequest.hpp
vod-server/cpp/simple-cpp-stream/src/server/: HttpServer.cpp  HttpServer.hpp
vod-server/cpp/simple-cpp-stream/src/util/: Logger.hpp
vod-transcoder/: build.gradle.kts  settings.gradle.kts
(+134 files in other folders)
